--- a/monday/src/main/resources/application.yml
+++ b/monday/src/main/resources/application.yml
@@ -2,9 +2,7 @@ spring:
   application:
     name: monday
   datasource:
-    url: jdbc:postgresql://localhost:5432/student
-    username: student
-    password: student
+    url: jdbc:h2:mem:students
   jpa:
     hibernate:
       ddl-auto: create
