--- a/monday-frontend/src/test/resources/application.yml
+++ b/monday-frontend/src/test/resources/application.yml
@@ -1,2 +1,16 @@
-#ten plik dodajemy aby nadpisać konfigurację w aplikacji domyślną testową konfiguracją springa
-#np. konfiguracją bazy danych (tu domyślnie używać będziemy in memory h2)
+spring:
+  application:
+    name: monday
+  datasource:
+    url: jdbc:h2:mem:students
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  thymeleaf:
+    cache: false
+server:
+  port: 8081
